Add some other work

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <img src="images/usercont.png" style="width:300px">
                 <br>
               </p>
-              <p align="center">We investigate into using tasks into day-to-day work. More information coming up soon!</p>.
+              <p align="center">We investigate in user behavior by mapping them to the tasks they are trying to accomplish on a daily basis.</p>.
               <!--<p align=center>
                 <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
@@ -140,7 +140,7 @@
 
           <tr>
             <td width="25%">
-              <img src='images/hierarchy.png' style="width:160px">
+              <img src='images/quesrec.png' style="width:160px">
             </td>
             <td valign="top" width="75%">
               <p>
@@ -198,6 +198,51 @@
                 <br>-->
                 <p></p>
                 <p>Each article in Wikihow contains images belonging to each task being solved in it. These images are a great source in order to understand the tasks being undertaken in scenes. This dataset is a collection of 1.5 million of such images annotated with their corresponding task.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td width="25%">
+              <img src='images/aspects.jpg' style="width:160px">
+            </td>
+            <td valign="top" width="75%">
+              <p>
+                <a target="_blank" href="https://usercontext.github.io/TaskImages1.5M/">
+                  <papertitle>Aspect-based Characterization of Community-based Question Answering
+                  Platforms</papertitle>
+                </a>
+                <br>
+                <a href="http://sebastinsanty.com/">Sebastin Santy</a>,
+                <a href="http://sebastinsanty.com/">Prasanta Bhattacharya</a>,
+                <a href="http://www.rishabhmehrotra.com/">Rishabh Mehrotra</a>,
+                <a href="https://emineyilmaz.cs.ucl.ac.uk/">Emine Yilmaz</a>
+                <br>
+                <em>Ongoing work</em>
+                          <br>
+                <p></p>
+                <p>We depend on several different platforms to accomplish our tasks. We subconciously select the platforms which might help in solving a particular task. Search Engines adds a layer of carelessness for task-relevance of platforms. We put effort in categorizing the platforms based on what task they focus on solving the most.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td width="25%">
+              <img src='images/linguist.png' style="width:160px">
+            </td>
+            <td valign="top" width="75%">
+              <p>
+                <a target="_blank" href="https://usercontext.github.io/TaskImages1.5M/">
+                  <papertitle>Characterizing online task heterogeneity on language-localized Q&A Platforms</papertitle>
+                </a>
+                <br>
+                <a href="http://sebastinsanty.com/">Sebastin Santy</a>,
+                <a href="http://sebastinsanty.com/">Prasanta Bhattacharya</a>,
+                <a href="http://www.rishabhmehrotra.com/">Rishabh Mehrotra</a>,
+                <a href="https://emineyilmaz.cs.ucl.ac.uk/">Emine Yilmaz</a>
+                <br>
+                <em>Ongoing work</em>
+                <br>
+                <p></p>
+                <p>Several online articles are manually translated to different languages. Effort is put into translating only if it is relevant in a particular linguistic community. We analyze on what tasks are relevant in those communities by observing these patterns.</p>
             </td>
           </tr>
           
