Add another working project

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       background-color: #ffffd0;
     }
   </style>
-  <link rel="icon" type="image/png" href="images/seal_icon.png">
+  <link rel="icon" type="image/png" href="images/ucl_seal.jpg">
   <title>UserContext</title>
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -144,7 +144,7 @@
             </td>
             <td valign="top" width="75%">
               <p>
-                <a target="_blank" href="https://usercontext.github.io/TaskHierarchy138K/">
+                <a target="_blank" href="#">
                   <papertitle>Leveraging Task Information for Question Recommendation</papertitle>
                 </a>
                 <br>
@@ -182,6 +182,27 @@
 
           <tr>
             <td width="25%">
+              <img src='images/category.png' style="width:160px">
+            </td>
+            <td valign="top" width="75%">
+              <p>
+                <a target="_blank" href="https://usercontext.github.io/TaskHierarchy138K/">
+                  <papertitle>Dynamic Enrichment of Existing Ontology in an online manner</papertitle>
+                </a>
+                <br>
+                <a href="http://sebastinsanty.com/">Sebastin Santy</a>,
+                <a href="http://www.rishabhmehrotra.com/">Rishabh Mehrotra</a>,
+                <a href="https://emineyilmaz.cs.ucl.ac.uk/">Emine Yilmaz</a>
+                <br>
+                <!--<em>AAAI Conference on Artificial Intelligence</em>, 2019
+                <br>-->
+                <p></p>
+                <p>Several websites maintain a large hierarchy of categories in order to segregate their pages and provide useful information to the user. These websites range from answer websites like Quora to e-commerce websites like Amazon. However, addition of new categories to this existing hierarchy is often manual. We investigate in updation of hierarchy by using the ground-truth hierarchy and learning the pre-decided paths for making future decisions.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td width="25%">
               <img src='images/physicalfit.jpg' style="width:160px">
             </td>
             <td valign="top" width="75%">
@@ -207,7 +228,7 @@
             </td>
             <td valign="top" width="75%">
               <p>
-                <a target="_blank" href="https://usercontext.github.io/TaskImages1.5M/">
+                <a target="_blank" href="#">
                   <papertitle>Aspect-based Characterization of Community-based Question Answering
                   Platforms</papertitle>
                 </a>
@@ -230,7 +251,7 @@
             </td>
             <td valign="top" width="75%">
               <p>
-                <a target="_blank" href="https://usercontext.github.io/TaskImages1.5M/">
+                <a target="_blank" href="#">
                   <papertitle>Characterizing online task heterogeneity on language-localized Q&A Platforms</papertitle>
                 </a>
                 <br>
